# twitch_web_socket

./: Cargo.toml  README.md  cspell.json  twitch.json
py_scripts/: get_badges.py
src/: lib.rs  main.rs  message_interface.rs  message_parser.rs  parser.rs
src/assets/: badges.rs
src/assets/json/: twitch_badges.json
src/twitch/: connection.rs
src/twitch/message/: mod.rs  reader.rs  writer.rs
src/twitch/user/: account.rs  auth.rs  mod.rs  settings.rs
twitch/json/: twitch_badges.json
