[package]
name = "twitch_web_socket"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.43"
colored = "3.1.1"
config = "0.15.19"
futures-util = "0.3.31"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
toml = "0.9.11"
